manifest/staging/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: doan-staging
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.rabiloo.net/datnx-workshop/doan/frontend:staging_f40c6f96
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
      imagePullSecrets:
      - name: gitlab-registry
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: doan-staging
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
